--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
+    "i18next": "^23.2.11",
     "next": "latest",
+    "next-i18next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.2",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "typescript": "^4.7.4"
